[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project]
name = "pygsdata"
description = "A Python interface for 21cm Global Signal Data."
readme = "README.md"
authors = [
    {name="Steven Murray", email="steven.murray@sns.it"}
]
license = {text="MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "attrs",
    "matplotlib",
    "hickleable",
    "read_acq",
    "h5py",
    "typing_extensions",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "myst-parser"
]
tests = [
    "pytest",
    "pytest-cov"
]
dev = [
    "pre-commit",
    "ruff",
    "pygsdata[docs,tests]"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "UP",   # pyupgrade
  "E",    # pycodestyle
  "W",    # pycodestyle warning
  "C90",  # mccabe complexity
  "I",    # isort
]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
addopts = "--verbose --durations=25"
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = "tests"
